--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "set PRISMA_CLIENT_ENGINE_TYPE=library && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
