--- a/render.yaml
+++ b/render.yaml
@@ -10,9 +10,5 @@ services:
         value: 18.17.0
       - key: PRISMA_CLIENT_ENGINE_TYPE
         value: library
-    # Note: SQLite on Render requires a 'Disk' for persistence across restarts.
-    # To enable persistence, uncomment the following lines and upgrade to a paid service.
-    # disk:
-    #   name: prisma-db
-    #   mountPath: /opt/render/project/src/prisma
-    #   sizeGB: 1
+      - key: DATABASE_URL
+        fromContext: dbUrl # Or sync with your external URL
