--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "icy-pulsar",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "scripts": {
     "dev": "set PRISMA_CLIENT_ENGINE_TYPE=library && next dev",
     "build": "next build",
