--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma": "^6.2.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.1",
     "zustand": "^5.0.11"
   },
